content/docs/0.7.x/reference/cli/commands/keptn_install.md
---
date: "2020-10-12T14:26:31+02:00"
title: "keptn install"
slug: keptn_install
---
## keptn install

Installs Keptn on a Kubernetes cluster

### Synopsis

The Keptn CLI allows installing Keptn on any Kubernetes derivate to which your kube config is pointing to, and on OpenShift.

For more information, please follow the installation guide [Install Keptn](https://v1.keptn.sh/docs/0.7.x/operate/install/#install-keptn)


```
keptn install [flags]
```

### Examples

```
keptn install                                                        # install on Kubernetes

keptn install --platform=openshift --use-case=continuous-delivery    # install continuous delivery on Openshift

keptn install --platform=kubernetes --endpoint-service-type=NodePort # install on Kubernetes with gateway NodePort

```

### Options

```
  -c, --creds string                   Specify a JSON file containing cluster information needed for the installation. This allows skipping user prompts to execute a *silent* Keptn installation.
      --endpoint-service-type string   Installation options for the endpoint-service type [ClusterIP,LoadBalancer,NodePort] (default "ClusterIP")
  -h, --help                           help for install
  -s, --insecure-skip-tls-verify       Skip tls verification for kubectl commands
  -n, --namespace string               Specify the namespace where Keptn should be installed in (default keptn). (default "keptn")
  -p, --platform string                The platform to run Keptn on [kubernetes,openshift] (default "kubernetes")
  -u, --use-case string                The use case to install Keptn for [continuous-delivery]
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn

###### Auto generated by spf13/cobra on 12-Oct-2020
